--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-wap
+# Swap
 [._]*.s[a-v][a-z]
 [._]*.sw[a-p]
 [._]s[a-rt-v][a-z]
@@ -11,8 +11,12 @@ Session.vim
 # Temporary
 .netrwhist
 *~
+
 # Auto-generated tag files
 tags
+
 # Persistent undo
 [._]*.un~
 
+# vim bundle folder
+bundle/
