precommit hook template

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-wap
+# Swap
 [._]*.s[a-v][a-z]
 [._]*.sw[a-p]
 [._]s[a-rt-v][a-z]
@@ -16,3 +16,5 @@ tags
 # Persistent undo
 [._]*.un~
 
+# vundle plugins
+bundle/
